# dragon-star-launcher

./: .gitignore  LICENSE  build.py  pyproject.toml  server.yml
.github/workflows/: debug.yml
src/: config.py  env.py  main.py  server.py  utils.py
src/core/: __init__.py  data.py  game.py  luancher.py  requests.py
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/src/: App.vue  main.ts  rpc.ts
web/src/assets/: main.css
web/src/stores/: server.ts
